<resources>
    <string name="app_name">CarClick</string>
    <string name="bC">Blue Car Wins!</string>
    <string name="rC">Red Car Wins!</string>
    <string name="play">play</string>
    <string name="settings">Settings</string>
    <string name="exit">exit</string>
    <string name="menu">menu</string>
    <string name="wanna">Are you sure want to exit?</string>
    <string name="YES">yes</string>
    <string name="NO">no</string>
</resources>
