<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorBack"
                android:adjustViewBounds="true">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_name"
                  android:textSize="45pt"
                  style="@style/AudioFileInfoOverlayText"
                  android:textColor="@color/colorBlue"
                  android:textStyle="italic|bold"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play"
                android:text="@string/play"
                style="@style/AudioFileInfoOverlayText"
                android:background="@color/invisible"
                android:textColor="@color/colorBlue"
                android:layout_gravity="center_horizontal"
                android:onClick="play"
                android:textSize="24pt"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
                android:text="@string/settings"
                style="@style/AudioFileInfoOverlayText"
                android:layout_marginTop="50dp"
                android:background="@color/invisible"
                android:textColor="@color/colorBlue"
                android:layout_gravity="center_horizontal"
                android:textSize="13pt"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exit"
                android:text="@string/exit"
                style="@style/AudioFileInfoOverlayText"
                android:layout_marginTop="50dp"
                android:onClick="exit"
                android:background="@color/invisible"
                android:textColor="@color/colorBlue"
                android:layout_gravity="center_horizontal"
                android:textSize="12pt"/>

    </LinearLayout>
</RelativeLayout>