<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:background="@drawable/road"
                android:adjustViewBounds="true">
    <FrameLayout
            android:layout_width="500dp"
            android:layout_height="60dp"
            android:background="@drawable/finish"
            android:adjustViewBounds="true"
            android:layout_marginTop="20dp">
    </FrameLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="50dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="20dp"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/bC"
                  android:visibility="gone"
                  style="@style/AudioFileInfoOverlayText"
                  android:textSize="17pt"
                  android:textColor="@color/colorRed"
                  android:id="@+id/winner"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/rC"
                  android:visibility="gone"
                  style="@style/AudioFileInfoOverlayText"
                  android:layout_marginTop="20dp"
                  android:textSize="17pt"
                  android:textColor="@color/colorRed"
                  android:id="@+id/winner1"/>
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/lL"
                 android:adjustViewBounds="true">

        <Button android:layout_width="64dp" android:layout_height="64dp"
                android:id="@+id/fCB"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_gravity="top|start"
                android:onClick="fCar"
                android:background="@drawable/bt"/>

        <Button android:layout_width="64dp" android:layout_height="64dp"
                android:id="@+id/sCB"
                style="@style/Widget.AppCompat.ButtonBar"
                android:layout_gravity="top|end"
                android:onClick="sCar"
                android:background="@drawable/bt"/>
    </FrameLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true">

         <Button android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@drawable/res"
                 android:visibility="gone"
                 android:id="@+id/res"
                 android:onClick="restars"
                 android:layout_gravity="center_horizontal|center_vertical"/>

          <Button android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/menu"
                  android:text="@string/menu"
                  style="@style/AudioFileInfoOverlayText"
                  android:background="@color/invisible"
                  android:textColor="@color/colorBlue"
                  android:visibility="gone"
                  android:layout_marginTop="20dp"
                  android:textSize="24pt"
                  android:onClick="menu"
                  android:layout_gravity="center_horizontal|center_vertical"/>
    </LinearLayout>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:id="@+id/bek">

        <ImageView android:layout_width="50dp"
                   android:layout_height="130dp"
                   android:background="@drawable/car1"
                   android:layout_gravity="start|bottom"
                   android:adjustViewBounds="true"
                   android:id="@+id/car1"/>

        <ImageView android:layout_width="50dp"
                   android:layout_height="130dp"
                   android:background="@drawable/car2"
                   android:layout_gravity="end|bottom"
                   android:adjustViewBounds="true"
                   android:id="@+id/car2" tools:ignore="ContentDescription"/>
    </FrameLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="180dp"
                  android:orientation="vertical"
                  android:id="@+id/yesnt"
                  android:visibility="gone"
                  android:background="@color/colorBlack"
                  android:layout_centerInParent="true">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/wanna"
                  style="@style/AudioFileInfoOverlayText"
                  android:textSize="16pt"
                  android:textColor="@color/colorBlue"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent">

        <Button android:layout_width="25dp"
                android:layout_height="80dp"
                android:onClick="menu"
                android:textSize="16pt"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/YES"/>

        <Button android:layout_width="25dp"
                android:layout_height="80dp"
                android:onClick="no"
                android:textSize="16pt"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/NO"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>